# chord

./: .gitignore  .gitmodules  CMakeLists.txt
cfg/: cfg.test.json  mock_data.json
cmake/: Findlibgcrypt.cmake
doc/: Doxyfile  index.txt
doc/html/: CMakeLists_8txt.html  annotated.html  chord__server_8cpp.html  classClientLogin.html  classClientMainWindow.html  classClientSend.html  classMailWidget.html  classchord_1_1Client.html  classchord_1_1Node.html  classchord_1_1Ring.html  classes.html  classmail_1_1MailBox.html  client_8cpp.html  client_8hpp.html  client_8hpp_source.html  clientlogin_8cpp.html  clientlogin_8hpp.html  clientlogin_8hpp_source.html  clientmainwindow_8cpp.html  clientmainwindow_8hpp.html  clientmainwindow_8hpp_source.html  clientsend_8cpp.html  clientsend_8hpp.html  clientsend_8hpp_source.html  dir_09983c05cdac1339df763db4826a546f.html  dir_48c1f94cd2ae07e13fa9a9f16a1d541c.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f39cc86e55bac03e280b7cd51a997c2e.html  files.html  formula.repository  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  index_8txt.html  (+25 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  (+35 more)
include/: chord.hpp  mail.hpp
include/chord/: client.hpp  server.hpp  types.hpp
include/gui/: clientlogin.hpp  clientmainwindow.hpp  clientsend.hpp  mailwidget.hpp
include/mail/: mail.hpp
protos/: chord.proto
src/: CMakeLists.txt  chord.cpp  chord_server.cpp  client.cpp  clientlogin.cpp  clientlogin.ui  clientmainwindow.cpp  clientmainwindow.ui  clientsend.cpp  clientsend.ui  load_mock_data.cpp  mail.cpp  mailwidget.cpp  mailwidget.ui  main.cpp  node_server.cpp  server.cpp
test/: CMakeLists.txt  chord_mail_test.cpp  mail_test.cpp  node_test.cpp  test_client.cpp  test_client.hpp
